--- a/app/src/main/res/layout/activity_godisnji_kalendar.xml
+++ b/app/src/main/res/layout/activity_godisnji_kalendar.xml
@@ -37,21 +37,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
     </ListView>
+
     <TextView
-            android:id="@+id/id_godina_textView"
-            android:text="@string/_2020_godina"
-            android:textColor="@color/colorRosso"
-            android:fontFamily="@font/actor"
-            android:textSize="26sp"
-            android:textStyle="italic"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/backBtnKalendar"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"/>
+        android:id="@+id/id_godina_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/actor"
+        android:gravity="center"
+        android:text="@string/_2020_godina"
+        android:textAlignment="center"
+        android:textColor="@color/colorRosso"
+        android:textSize="26sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.402"
+        app:layout_constraintStart_toEndOf="@+id/backBtnKalendar"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
