Dodata sva zitija zakljucno sa Decembarskim.

--- a/app/src/main/res/layout/activity_detail_kalendar.xml
+++ b/app/src/main/res/layout/activity_detail_kalendar.xml
@@ -69,7 +69,7 @@
         android:inputType="none"
         android:isScrollContainer="true"
         android:lines="1000"
-        android:text="@string/info_text2"
+        android:text="@string/info_text"
         android:textAlignment="textStart"
         android:textColor="@color/colorSiviText"
         android:textSize="16sp"
