--- a/app/src/main/res/layout/activity_molitve.xml
+++ b/app/src/main/res/layout/activity_molitve.xml
@@ -23,4 +23,19 @@
         android:contentDescription="@string/back_btn_molitve_activity"
         android:onClick="nazad_sa_molitvi"/>
 
+    <ListView
+        android:id="@+id/idMolitveListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:dividerHeight="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/id_back_Btn_molitve"
+        android:layout_marginTop="56dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+    </ListView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
