--- a/app/src/main/res/layout/activity_detail_kalendar.xml
+++ b/app/src/main/res/layout/activity_detail_kalendar.xml
@@ -51,7 +51,7 @@
         app:layout_constraintBottom_toTopOf="@+id/zitije"
         android:layout_marginBottom="8dp"/>
 
-    <EditText
+    <TextView
         android:id="@+id/zitije"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -60,9 +60,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:autofillHints="Text Zitija Svetitelja"
+        android:scrollbars="vertical"
+        android:scrollbarThumbVertical="@color/colorOrange"
         android:clickable="false"
         android:contextClickable="false"
-        android:cursorVisible="false"
         android:focusable="false"
         android:padding="10dp"
         android:focusableInTouchMode="false"
