--- a/app/src/main/res/layout/activity_katihizis.xml
+++ b/app/src/main/res/layout/activity_katihizis.xml
@@ -27,7 +27,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="TextView pitanje"
+        android:text="@string/textview_pitanje"
         android:textAlignment="center"
         android:textSize="16sp"
         android:textStyle="italic"
@@ -44,10 +44,12 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:padding="10dp"
+        android:scrollbars="vertical"
+        android:scrollbarThumbVertical="@color/colorOrange"
         android:textAlignment="textStart"
         android:textStyle="italic"
         android:textColor="@color/colorSiviText"
-        android:text="TextView odgovor"
+        android:text="@string/textview_odgovor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/id_pitanje_textView" />
