Zavrsena App. Ostaje da se exportuje apk file.

--- a/app/src/main/res/values/katPitanja.xml
+++ b/app/src/main/res/values/katPitanja.xml
@@ -5,7 +5,7 @@
 <item>Које су најважније тајне о бићу и животу о којима само Христос има право знање?</item>
 <item>Нису ли и неки други верски учитељи, мислиоци и философи покушавали да објасне ове тајне?</item>
 <item>У чему се онда састоји преимућство Христовог знања над њиховим?</item>
-<item>Заиста, и у свакидашњем животу ми више верујемо очевицу него неком теоретичару или философу. Али постојали су и други верски учитељи који су тврдили да су своје учење примили од појединих анђела. И анђели су очевици великих тајни. Шта да мислимо о томе?</item>
+<item>Заиста, и у свакидашњем животу ми више верујемо очевицу него неком теоретичару или философу. Али постојали су и други верски учитељи који су тврдили да су своје учење примили од појединих анђела.</item>
 <item>Треба ли у овом случају да мислимо да је хришћанска религија изнад свих осталих религија у свету?</item>
 <item>Шта онда треба да мислимо о неким савременим покушајима да се хришћанска вера изједначи са свим осталим религијама?</item>
 <item>Којим средствима да се боримо против покушаја таквог изједначавања?</item>
