Zavrsena App. Definitivno.

--- a/app/src/main/res/layout/activity_katihizis_detail.xml
+++ b/app/src/main/res/layout/activity_katihizis_detail.xml
@@ -53,6 +53,8 @@
         android:textStyle="italic"
         android:textAlignment="textStart"
         android:text="@string/textview_odgovor"
+        android:scrollbars="vertical"
+        android:scrollbarThumbVertical="@color/colorOrange"
         app:layout_constraintBottom_toTopOf="@+id/id_kat_detail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
