--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -152,9 +152,10 @@
               android:id="@+id/id_kalendar_imageB"
               android:layout_width="50dp"
               android:layout_height="50dp"
+              android:contentDescription="@string/katihizis_image"
               android:background="@drawable/back_btn_big"
               android:backgroundTint="@color/colorBanana"
-          android:layout_margin="10dp"
+              android:layout_margin="10dp"
               android:padding="5dp"
               android:onClick="otvoriKatihizis"
               android:src="@drawable/ic_book_48px">
@@ -164,8 +165,9 @@
               android:id="@+id/id_kalendar_imageC"
               android:layout_width="50dp"
               android:layout_height="50dp"
+              android:contentDescription="@string/share_image"
               android:background="@drawable/back_btn_big"
-          android:layout_margin="10dp"
+              android:layout_margin="10dp"
               android:padding="5dp"
               android:onClick="sharePravoslavca"
               android:backgroundTint="@color/colorBanana"
@@ -176,9 +178,10 @@
               android:id="@+id/id_kalendar_image"
               android:layout_width="50dp"
               android:layout_height="50dp"
+              android:contentDescription="@string/molitva_image"
               android:background="@drawable/back_btn_big"
               android:backgroundTint="@color/colorBanana"
-          android:layout_margin="10dp"
+              android:layout_margin="10dp"
               android:padding="5dp"
               android:onClick="otvoriMolitvenik"
               android:src="@drawable/ic_pan_tool_48px">
@@ -189,9 +192,10 @@
               android:id="@+id/id_kalendar_imageE"
               android:layout_width="50dp"
               android:layout_height="50dp"
+              android:contentDescription="@string/info_image"
               android:background="@drawable/back_btn_big"
               android:backgroundTint="@color/colorBanana"
-          android:layout_margin="10dp"
+              android:layout_margin="10dp"
               android:padding="5dp"
               android:onClick="otvoriInfo"
               android:src="@drawable/ic_info_48px">
@@ -206,7 +210,7 @@
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            app:adSize="SMART_BANNER"
-           app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+           app:adUnitId="ca-app-pub-7920431183682527/3639868432"
            app:layout_constraintBottom_toBottomOf="@+id/bgView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
