--- a/app/src/main/res/layout/activity_godisnji_kalendar.xml
+++ b/app/src/main/res/layout/activity_godisnji_kalendar.xml
@@ -31,6 +31,8 @@
             app:layout_constraintTop_toBottomOf="@+id/backBtnKalendar"
             android:layout_marginTop="56dp"
             android:layout_marginLeft="8dp"
+            android:scrollbars="vertical"
+            android:scrollbarThumbVertical="@color/colorOrange"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
