--- a/app/src/main/res/layout/activity_katihizis_dva.xml
+++ b/app/src/main/res/layout/activity_katihizis_dva.xml
@@ -29,6 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/id_back_kat_dva"
         android:layout_marginTop="56dp"
         android:layout_marginLeft="8dp"
+        android:scrollbarThumbVertical="@color/colorOrange"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
