--- a/app/src/main/res/layout/activity_mesecni_kalendar.xml
+++ b/app/src/main/res/layout/activity_mesecni_kalendar.xml
@@ -50,6 +50,8 @@
             android:layout_marginTop="56dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:scrollbars="vertical"
+            android:scrollbarThumbVertical="@color/colorOrange"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
