--- a/app/src/main/res/layout/activity_molitve.xml
+++ b/app/src/main/res/layout/activity_molitve.xml
@@ -29,6 +29,8 @@
         android:layout_height="match_parent"
         android:dividerHeight="4dp"
         app:layout_constraintTop_toBottomOf="@+id/id_back_Btn_molitve"
+        android:scrollbars="vertical"
+        android:scrollbarThumbVertical="@color/colorOrange"
         android:layout_marginTop="56dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
